Switcher z-index fix
Changed the index on the switcher, not the header (much simpler, and
also the correct change to make as the switcher’s z-index was much
higher than needed).

--- a/css/scu-less/partials/switcher.less
+++ b/css/scu-less/partials/switcher.less
@@ -8,7 +8,7 @@
 	font-size: 24px;
 	position:absolute;
 	background-color: @light-gray;
-	z-index: 100;
+	z-index: 1;
 	@media (min-width: @screen-sm-min) { width: 200%; top:50px; background: none;}
 	@media (min-width: @screen-sm-min) and (max-width: @screen-md) { font-size: 16px;} 
 	&.on {
